# blueprintx

./: .codespellrc  .gitignore  .gitlint  .pre-commit-config.yaml  404.html  CLAUDE.md  COLOR_FIX.md  CONTRIBUTING.md  FINAL_STATUS.md  LICENSE  Makefile  README.md  demo.sh  index.html  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  requirements.txt  run.sh  sitemap.xml  tasks.sh
templates/ddd-service-native-db/: .env.example  CLAUDE.md  mkdocs.yml  pyproject.toml
templates/ddd-service-native-db/docs/: api.md  architecture.md  index.md
templates/ddd-service-native-db/docs/api/: index.md  reference.md
templates/ddd-service-native-db/src/: __init__.py  main.py
templates/ddd-service-native-db/src/app/: bootstrap.py  container.py
templates/ddd-service-native-db/src/capabilities/: __init__.py
templates/ddd-service-native-db/src/chassis/db_schema/: __init__.py
templates/ddd-service-native-db/src/config/: global_slots.py  outputs.yaml
templates/ddd-service-native-db/src/core/application/: database_factory.py
templates/ddd-service-native-db/src/utils/: __init__.py
templates/ddd-service-orm-db/: .env.example  CLAUDE.md  alembic.ini  mkdocs.yml  pyproject.toml
templates/ddd-service-orm-db/alembic/: CLAUDE.md  env.py  script.py.mako
templates/ddd-service-orm-db/docs/: CLAUDE.md  architecture.md  index.md
templates/ddd-service-orm-db/docs/api/: reference.md
templates/ddd-service-orm-db/src/: main.py
templates/ddd-service-orm-db/src/app/: bootstrap.py  container.py
templates/ddd-service-orm-db/src/chassis/typing/: protocol_type_checker.py
templates/ddd-service-orm-db/src/config/: __init__.py  global_slots.py  outputs.yaml  webhooks.yaml
templates/ddd-service-orm-db/src/core/application/: database_factory.py
templates/hex-service/: README.md  main.py  pyproject.toml
templates/hex-service/src/: __init__.py  main.py
templates/hex-service/src/modules/banking/: __init__.py  main.py
templates/hex-service/src/modules/example_feature/: __init__.py
templates/lib-minimal/: .coveragerc  .env.example  CLAUDE.md  README.md  config_CLAUDE.md  main.py  mkdocs.yml  ports_CLAUDE.md  pyproject.toml
templates/lib-minimal/.github/workflows/: docs.yaml  release-pypi.yaml  release-test-pypi.yaml  release_pypi.yaml  release_test_pypi.yaml
templates/lib-minimal/docs/: CLAUDE.md  changelog.md  contributing.md  examples.md  index.md  usage.md
templates/lib-minimal/docs/api/: index.md  reference.md
templates/lib-minimal/make/: library.mk
templates/mvc-service-native-db/: .env.example  CLAUDE.md  mkdocs.yml  pyproject.toml
templates/mvc-service-native-db/docs/: api.md  architecture.md  index.md
templates/mvc-service-native-db/docs/api/: reference.md
templates/mvc-service-native-db/optional/multi_pipeline/: main.py  pipeline_common.py  pipeline_dispatch.py  pipeline_reconcile.py  pipeline_send.py
templates/mvc-service-native-db/src/config/: connection_db.py  outputs.yaml  startup.py
templates/mvc-service-native-db/src/controller/: CLAUDE.md  _pipeline.py  main.py
templates/mvc-service-native-db/src/model/: CLAUDE.md  conexao_db.py  example_entity.py
templates/mvc-service-native-db/src/view/: __init__.py  report_renderer.py
templates/mvc-service-native-db/tests/: CLAUDE.md
templates/python-common/: .codespellrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.mariadb.yml  docker-compose.mysql.yml  docker-compose.postgresql.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  run.sh  tasks.sh
templates/python-common/.github/: dependabot.yml
templates/python-common/.github/workflows/: contract_drift.yaml  pr-gate.yaml  pr-reconcile.yaml  release.yaml  tests.yaml
templates/python-common/docs/: changelog.md  contributing.md  examples.md  faq.md  usage.md
templates/python-common/docs/stylesheets/: extra.css
templates/python-common/optional/: storage.env.fragment  webhooks.yaml
templates/python-common/optional/chassis/db/: __init__.py
templates/python-common/optional/chassis/db_wschema/: __init__.py
templates/python-common/optional/email/: __init__.py  factory.py
templates/python-common/optional/email/domain/: __init__.py  ports.py
templates/python-common/optional/email/infrastructure/: __init__.py  null_email_handler.py  outlook_email_handler.py  smtp_email_handler.py
templates/python-common/optional/ports/: __init__.py  example_port.py
templates/python-common/optional/typing/: __init__.py  abc_type_checker.py  decorators.py  policy.py  protocol_type_checker.py  type_checker.py  validate.py
templates/python-common/optional/webhook/: __init__.py  factory.py
templates/python-common/optional/webhook/application/: __init__.py  webhook_factory.py
templates/python-common/prompts/: readme.md  refactoring.md  unit_test.md
templates/python-common/scripts/: export_deps.sh  vscode_extensions.sh  vscode_keybindings.sh
templates/python-common/src/config/: CLAUDE.md  contract_oracles.yaml  env_config.py  inputs.yaml  outputs.yaml  startup.py
templates/python-common/src/utils/: br_identifiers.py  dates.py  decimals.py  dtypes.py  frames.py  http_downloader.py  loggers.py  logs.py  logs_emitter.py  outlook_gateway.py  paths.py  provenance.py  retry.py  sidecar_metadata.py  signatures.py  tabular_reader.py  text.py  yaml_reader.py  zip_extractor.py
templates/python-common/tests/: conftest.py
templates/python-common/tests/fixtures/: example_source__header.csv
templates/python-common/tests/integration/: test_bin_scripts.py
templates/python-common/tests/unit/: test_backlog_ledger.py  test_br_identifiers.py  test_contract_oracle_example.py  test_dates.py  test_decimals.py  test_dtypes.py  test_env_config.py  test_family_convention_example.py  test_frames.py  test_http_downloader.py  test_loggers.py  test_logs.py  test_logs_emitter.py  test_outlook_gateway.py  test_paths.py  test_pr_gate.py  test_provenance.py  test_retry.py  test_sidecar_metadata.py  test_signatures.py  test_tabular_reader.py  test_text.py  test_typing.py  test_zip_extractor.py
(+325 files in other folders)
