[tool.poetry]
name = "BlueprintX"
# Stub only — BlueprintX is not a published package; this file exists to drive the docs site.
# The real version is the git tag (see bin/blueprintx.sh print_version). Do not hand-bump.
version = "0.0.0"
description = "Docs and tooling for the BlueprintX scaffolder"
authors = []
readme = "README.md"
license = "MIT"
homepage = "https://github.com/guilhermegor/BlueprintX"
repository = "https://github.com/guilhermegor/BlueprintX"
keywords = ["python", "scaffolding", "mkdocs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
package-mode = false

[tool.poetry.urls]
"Bug Reports" = "https://github.com/guilhermegor/BlueprintX/issues"
"Source" = "https://github.com/guilhermegor/BlueprintX"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
pymdown-extensions = ">=10.0"

[tool.commitizen]
# Conventional-commit driven changelog. Releases are cut by tagging (see .github/workflows),
# not a hand-run bump; `cz changelog` (via `make changelog`) groups commits by tag into the
# root CHANGELOG.md, which the docs Changelog page single-sources via a snippets include.
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
