[tool.poetry]
name = "${PROJECT_NAME}"
version = "${PROJECT_VERSION}"
description = "${PROJECT_DESCRIPTION}"
authors = []
readme = "README.md"
license = "${PROJECT_LICENSE}"
homepage = "${HOMEPAGE}"
repository = "${REPOSITORY}"
keywords = ["python"]
package-mode = false
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Reports" = "${BUG_REPORTS_URL}"
"Source" = "${SOURCE_URL}"

[tool.commitizen]
# Conventional-commit driven changelog. Unlike the library tier, a service keeps its
# version in pyproject.toml (this is the nominal home). Tags come from `cz bump` (offline,
# via `make bump_version`) or the `release.yaml` workflow (online); `cz changelog` (via
# `make changelog`, and the docs build) groups commits by those tags.
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Runtime type-checking engine behind src/chassis/typing. A main (not dev) dependency:
# production code imports it via @type_checker / metaclass=TypeChecker.
beartype = ">=0.22"
python-dotenv = ">=1.0.0"
joblib = ">=1.3"
pyodbc = ">=5.0"
oracledb = ">=2.0"
psycopg = ">=3.1"
# 9.x requires system libmysqlclient; pin to 8.x for portable wheels
mysql-connector-python = ">=8.3,<9.0"
stpstone = ">=3.2.0"
# Microsoft Teams incoming-webhook transport, used by the webhook opt-in (teams adapter).
pymsteams = ">=0.2.5"
# YAML config parsing (inputs/outputs/webhooks .yaml) in src/config.
pyyaml = ">=6.0"
# Outlook desktop COM automation (utils/outlook_gateway); Windows-only at install time.
pywin32 = {version = ">=306", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"
# Pinned to the ruff-pre-commit hook minor (.pre-commit-config.yaml) so `make
# lint` and the hook never disagree on formatting/lints.
ruff = ">=0.11.13,<0.12"
codespell = ">=2.4.1"
pydocstyle = ">=6.3.0"
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
coverage = ">=7.6.0"
# genbadge replaces the abandoned coverage-badge (it imported the removed
# pkg_resources and breaks on setuptools >= 81).
genbadge = {extras = ["coverage"], version = ">=1.1.0"}
# Static type-checker + non-Python lint gates (mirrored in .pre-commit-config and
# `make lint`). shellcheck + shfmt are pip dev-deps (shellcheck-py/shfmt-py); lint_shell.sh resolves them via poetry run, falls back to a system binary, then skips.
mypy = ">=1.8.0"
sqlfluff = ">=3.0.0"
yamllint = ">=1.35.0"
shfmt-py = ">=3.7.0"
shellcheck-py = ">=0.10.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mike = ">=2.1.0"
pymdown-extensions = ">=10.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
