[tool.poetry]
name = "${PROJECT_NAME}"
version = "${PROJECT_VERSION}"
description = "${PROJECT_DESCRIPTION}"
authors = []
readme = "README.md"
license = "${PROJECT_LICENSE}"
homepage = "${HOMEPAGE}"
repository = "${REPOSITORY}"
keywords = ["python"]
package-mode = false
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Reports" = "${BUG_REPORTS_URL}"
"Source" = "${SOURCE_URL}"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = ">=1.0.0"
pandas = ">=2.0"
openpyxl = ">=3.1"
joblib = ">=1.3"
pyodbc = ">=5.0"
oracledb = ">=2.0"
psycopg = ">=3.1"
# 9.x requires system libmysqlclient; pin to 8.x for portable wheels
mysql-connector-python = ">=8.3,<9.0"
stpstone = ">=3.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"
# Pinned to the ruff-pre-commit hook minor (.pre-commit-config.yaml) so `make
# lint` and the hook never disagree on formatting/lints.
ruff = ">=0.11.13,<0.12"
codespell = ">=2.4.1"
pydocstyle = ">=6.3.0"
pytest = ">=8.0.0"
pytest-mock = ">=3.12.0"
pytest-cov = ">=6.0.0"
coverage = ">=7.6.0"
# genbadge replaces the abandoned coverage-badge (it imported the removed
# pkg_resources and breaks on setuptools >= 81).
genbadge = {extras = ["coverage"], version = ">=1.1.0"}
# Static type-checker + non-Python lint gates (mirrored in .pre-commit-config and
# `make lint`). shellcheck is a system binary; lint_shell.sh skips when it is absent.
mypy = ">=1.8.0"
sqlfluff = ">=3.0.0"
yamllint = ">=1.35.0"
shfmt-py = ">=3.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
pymdown-extensions = ">=10.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
